tests/fixtures/multi_module/invalid/long_cycle/c.furqan
// D9/D20 G2 fixture. Three-module cycle: A -> B -> C -> A.

bismillah C {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: c_side
    not_scope: nothing_excluded
}

tanzil c_deps {
    depends_on: A
}
